# knot-generator

./: README.md  pyproject.toml  requirements.txt
.history/: README_20250424113523.md  generator_20250422192049.py  generator_20250422193424.py  generator_20250422193638.py  generator_20250422193642.py  generator_20250422193853.py  generator_20250422194038.py  generator_20250422194237.py  generator_20250422194348.py  generator_20250422194504.py  generator_20250422194602.py  generator_20250422194704.py  generator_20250422194928.py  generator_20250422195210.py  pyproject_20250424112836.toml  requirements_20250424070005.txt
.history/src/: generator_20250422195337.py  generator_20250424113516.py
src/: knots.py
